packages/ui/src/Select/CheckableSelectField.module.scss
@use '../../styles/constants' as c;
@use '../../styles/helpers' as h;

.panel {
  z-index: c.$zIndex200;
}

.opener {
  input {
    cursor: pointer;
  }
}

.dropdown {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  padding: c.$grid * 5;
  box-shadow: 0 c.$cardShadowSize c.$cardShadowBlur 0 c.$colorShadow;
  border-radius: c.$borderRadius;
  background: c.$colorNeutralWhite;
}

.options {
  display: flex;
  overflow: auto;
  max-height: 300px;
  flex-direction: column;
}

.search {
  margin-bottom: c.$grid * 2;
}

.option {
  background: transparent;
  border: none;
  display: inline-flex;
  align-items: center;
  text-align: left;
  flex-shrink: 0;
  font-size: c.$fontSizeBodySmall;
  color: c.$colorTextSecondary;
  outline: c.$outlineWidth solid transparent;
  margin-bottom: c.$grid * 2.5;
  overflow: hidden;

  &:focus {
    @include h.outlineFormField;
  }

}

.optionChecked {
  color: c.$colorText;
}

.bottom {
  display: flex;
  padding: c.$grid * 2.5 c.$grid * 2.5 0 c.$grid * 2.5;
  margin: 0 (-(c.$grid * 5));
  justify-content: space-between;
  border-top: 1px solid c.$colorNeutral;
}

.checkmark {
  width: c.$iconSizeSmall;
  height: c.$iconSizeSmall;
  border: c.$borderWidth solid c.$colorNeutralLight;
  border-radius: c.$grid;
  color: transparent;
  margin-right: c.$grid * 2;
  background-color: transparent;
  flex-shrink: 0;

  &.checked {
    color: c.$colorNeutralWhite;
    background-color: c.$colorSuccessLight;
    border-color: c.$colorSuccessLight;
  }
}

